--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   rinf: ^8.4.0
   tuple: ^2.0.2
   image_picker: ^1.1.2
+  any_link_preview: ^3.0.2
+  audio_waveforms: ^1.2.0
+  cached_network_image: ^3.4.1
+  chatview_utils: ^0.0.1
+  emoji_picker_flutter: ^4.3.0
+  intl: ^0.20.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
